@@ -761,3 +761,21 @@
 # IPMI_OEM_Sensor_System_Event_Record 343:40 0x03 0xC0 ANY 0x01 ANY ANY Critical
 #
 ##########################################################################################################
+#
+## Supermicro CPU Temperature Overheat
+## (X7DBR-3/X8DTH/X8DTG/X8DTU/X8DT3-LN4F/X8DTU-6+/X8DTL-3F/X8SIL-F/X9SCL/X9SCM/X8DTN+-F/X8SIE/X9SCA-F-O/H8DGU-F)
+##
+## Manufacturer ID = 10876 (Supermicro), 10437 (Peppercon, IPMI card manufacturer),
+##                   47488 (Supermicro, not IANA number, special case),
+##                   5593 (Magnum Technologies, rebranded Supermicro board)
+## Product ID = 4 (X7DBR-3, X7DB8, X8DTN, X7SBI-LN4), 43707 (X8DTH, X8DTG, X8DTU, X8DT3-LN4F), 1549 (X8DTU-6+),
+##              6 (X8DTL, X8DTL-3F), 1541 (X8SIL-F), 1572 (X9SCL, X9SCM), 1551 (X8DTN+-F), 1037 (X8SIE)
+##              1585 (X9SCA-F-O / X9SCA_F_O), 43025 (H8DGU-F / H8DGU_F)
+## Event/Reading Type Code = 70h (OEM)
+## Sensor Type = C0h (OEM)
+## EventData1 0x02 = "Overheat"
+##
+## Note: Early Supermicro motherboards used the "Peppercon" Manufacturer ID
+#
+# IPMI_OEM_Value 10876:1572,10437:4,47488:43707+1549+6+1541+1572+1551+1037+1585+43025,5593:6 0x70 0xC0 0x02 ANY ANY Critical
+##########################################################################################################
